fix: collapse style

--- a/src/components/Collapse/Collapse.css
+++ b/src/components/Collapse/Collapse.css
@@ -1,3 +1,7 @@
+.r-collapse-wrapper {
+  @apply block;
+}
+
 .r-collapse-title {
   @apply cursor-pointer text-lg flex items-center justify-between relative;
 }
